--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,24 +22,24 @@
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="tab-completed" data-bs-toggle="tab" data-bs-target="#completed" type="button"
-                    role="tab">Completed/Over
+                    role="tab">Completed/Over task
             </button>
         </li>
         <!-- Tab Add task -->
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="tab-addtask" data-bs-toggle="tab" data-bs-target="#addTask" type="button"
-                    role="tab">Add task
+                    role="tab">Add new task
             </button>
         </li>
 
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="tab-category" data-bs-toggle="tab" data-bs-target="#category" type="button"
-                    role="tab">Add category
+                    role="tab">Add new category
             </button>
         </li>
         <li class="nav-item" role="presentation">
             <button class="nav-link" id="tab-member" data-bs-toggle="tab" data-bs-target="#member" type="button"
-                    role="tab">Add member
+                    role="tab">Add new member
             </button>
         </li>
     </ul>
